# Temporal

./: README.md
go_worker/: README.md  go.mod  go.sum
go_worker/activities/: main.go
go_worker/commons/: main.go
go_worker/starter/: main.go
go_worker/worker/: main.go
go_worker/workflows/: main.go
my_temporal/: README.md  pyproject.toml
my_temporal/my_temporal/: starter.py  worker.py
otel-collector/: README.md  docker-compose.yaml  otel-collector-config.yaml
python_worker/: README.md  pyproject.toml
python_worker/my_temporal/: starter.py  worker.py
python_worker/my_temporal/activities/: greeting.py
python_worker/python_worker/: commons.py  starter.py  worker.py
python_worker/python_worker/activities/: greeting.py  rich.py
server/: .env  docker-compose.yml
